# tslink

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  changelog.md  lint.sh  tests.sh
.github/workflows/: on_pull_request.yml
examples/node_bindgen/: run_test.sh
examples/node_bindgen/native/: Cargo.toml  build.sh
examples/node_bindgen/native/src/: lib.rs
examples/node_bindgen/ts/: package.json  tsconfig.json
examples/node_bindgen/ts/src/: lib.ts
src/: args.rs  config.rs  error.rs  lib.rs  package.rs
src/config/: cfg.rs  mod.rs
src/context/: input.rs  mod.rs  target.rs
src/defs/: detached.rs  enums.rs  mod.rs  structs.rs
src/interpreter/: mod.rs  offset.rs
src/interpreter/dts/: composite.rs  detached.rs  mod.rs  primitive.rs  refered.rs  structs.rs
src/interpreter/js/: composite.rs  enums.rs  mod.rs  refered.rs
src/interpreter/ts/: composite.rs  detached.rs  enums.rs  export.rs  import.rs  indexer.rs  mod.rs  primitive.rs  primitives.rs  refered.rs  structs.rs  writer.rs
src/modificator/: mod.rs
src/nature/: composite.rs  fabric.rs  generic.rs  mod.rs  origin.rs  primitive.rs  refered.rs  types.rs
src/nature/defs/: composite.rs  mod.rs  primitive.rs  refered.rs
src/reader/: enums.rs  mod.rs  structs.rs
src/types/: composite.rs  mod.rs  primitives.rs
tests/callbacks/: Cargo.toml  tsconfig.json
tests/callbacks/rs/: callbacks.rs
tests/callbacks/ts/: callbacks.ts
tests/constant/: Cargo.toml  package.json
tests/constant/output/: module.ts
tests/constant/rs/: lib.rs
tests/constant/ts/: lib.ts
tests/features/: Cargo.toml  tslink.toml
tests/features/pkg/: callbacks.js  callbacks.js.map  common.d.ts  consturctors.js  custom_data.js.map  error_handeling.js  error_handeling.js.map  lib.d.ts  lib.js  lib.js.map
tests/features/rs/: callbacks.rs  lib.rs
tests/features/src/: main.rs
tests/features/ts/: callbacks.ts
tests/modules/: Cargo.toml  run_test.sh
tests/modules/output/: index.ts  module_a.ts  module_b.ts
tests/modules/src/: lib.rs  module_a.rs  module_b.rs
tests/modules/ts_check/: package.json  tsconfig.json
tests/modules/ts_check/src/: main.ts
tests/node-bindgen/: Cargo.toml  package.json  tsconfig.json  tslink.toml
tests/node-bindgen/pkg/: async_methods.js  async_methods.js.map  callbacks.js  callbacks.js.map  common.d.ts  common.js  common.js.map  consturctors.js.map  custom_data.js  custom_data.js.map  lib.d.ts  lib.js  lib.js.map  optional.js  optional.js.map  types.js  types.js.map
tests/node-bindgen/rs/: async_methods.rs  asyncness.rs  callbacks.rs  constant.rs  constructors.rs  custom_data.rs  error_handeling.rs  errors.rs  json.rs  lib.rs  optional.rs  sync.rs  threads.rs  types.rs
tests/node-bindgen/src/: sync.rs
tests/node-bindgen/ts/: async_methods.ts  callbacks.ts  common.ts  constant.ts  consturctors.ts  custom_data.ts  errors.ts  json.ts  lib.ts  optional.ts  threads.ts  types.ts
tests/renaming/: Cargo.toml  package.json  tslink.toml
tests/renaming/rs/: lib.rs
tests/renaming/ts/: lib.ts
