[package]
name = "tslink"
version = "0.1.4"
edition = "2021"
authors = ["d.astafyev@outlook.com"]
description = "Creates typescript definitions based on rust code"
license = "Apache-2.0"
keywords = ["typescript", "node", "node-bindgen", "javascript"]
categories = ["node"]
repository = "https://github.com/icsmw/tslink.git"
homepage = "https://github.com/icsmw/tslink"
readme = "README.md"

[lib]
name = "tslink"
proc-macro = true

[dependencies]
convert_case = "0.6.0"
lazy_static = "1.4.0"
proc-macro2 = "1.0.68"
quote = "1.0.33"
serde = { version="1.0.189", features=["derive"] }
syn = { version="2.0.37", features=["full","fold"] }
thiserror = "1.0.50"
toml = "0.8.2"
uuid = { version = "1.3", features = ["v4"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
