[package]
name = "tslink"
version = "0.4.2"
edition = "2021"
authors = ["d.astafyev@outlook.com"]
description = "Creates typescript definitions based on rust code"
license = "Apache-2.0"
keywords = ["typescript", "node", "node-bindgen", "javascript"]
categories = ["api-bindings", "web-programming"]
repository = "https://github.com/icsmw/tslink.git"
homepage = "https://github.com/icsmw/tslink"
readme = "README.md"

[lib]
name = "tslink"
proc-macro = true

[dependencies]
convert_case = "0.6"
lazy_static = "1.4"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version="1.0", features=["derive"] }
syn = { version="2.0", features=["full","fold"] }
thiserror = "1.0"
toml = "0.8"
uuid = { version = "1.3", features = ["v4"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
