[package]
name = "tslink-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "rs/lib.rs"

[tslink]
node = "./dist/index.node"
snake_case_naming = "methods"

[dependencies]
tslink = { path = "../../" }