[package]
name = "binding"
version = "0.1.0"
edition = "2021"
# Added becuase: https://github.com/rust-lang/rust/issues/98903
resolver = "2"

[lib]
crate-type = ["cdylib"]
path = "rs/lib.rs"

[build-dependencies]
node-bindgen = {git = "https://github.com/infinyon/node-bindgen.git", branch="master", default-features = false, features = ["build"] }

[dependencies]
node-bindgen = {git = "https://github.com/infinyon/node-bindgen.git", branch="master", features = ["serde-json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["serde", "v4"] }
tslink = { path = "../../" }